fix the wrap size to allow it cover all the orders screen

--- a/public/admin/style.scss
+++ b/public/admin/style.scss
@@ -161,7 +161,7 @@
 }
 .wrap{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     padding: 40px 120px 40px 120px;
     .header{
         width: 100%;
